--- a/myRecord.html
+++ b/myRecord.html
@@ -35,7 +35,7 @@
 	<img src="./image/12.jpg" class="img-responsive">
 		<ul class="hbRecord">
 	    	<li>
-		    	<p class="start">第<span  class="round">X</span>轮总共领取了<span class="round-money">0</span>元</p>
+		    	<p class="start">第<span  class="round">X</span>轮我抢到<span class="round-money">0</span>元</p>
 		    	<p class="benlun">本轮金额<span class="bl-money">0</span>元，<sapn class="time">0</sapn>秒被抢光了</p>
 	    	</li>
 	    	
@@ -44,4 +44,7 @@
 </body>
 <script src="./js/zepto.min.js"></script>
 <script src="./js/myrecord.js"></script>
+<div style="display: none;">
+<script language="javascript" type="text/javascript" src="//js.users.51.la/19287660.js"></script>
+</div>
 </html>
