--- a/Weather-Forecast.html
+++ b/Weather-Forecast.html
@@ -20,4 +20,7 @@
 	</div>
 </body>
 <script src="./js/zepto.min.js"></script>
+<div style="display: none;">
+<script language="javascript" type="text/javascript" src="//js.users.51.la/19287660.js"></script>
+</div>
 </html>
