--- a/entrance.html
+++ b/entrance.html
@@ -1,146 +1,183 @@
- <!doctype html>
+<!doctype html>
 <html lang="zh-CH">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-<title>广电微信红包雨</title>
-<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
-<link rel="stylesheet" type="text/css" href="./styles/entrance.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+	<title>广电微信红包雨</title>
+	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
+	<link rel="stylesheet" type="text/css" href="./styles/entrance.css?v=201791306">
 
 <body ontouchstart oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onbeforecopy="return false" oncopy="document.selection.empty()" onselect="return false" unselectable="on">
-   
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <p style="margin-top: 10px">广电红包雨现金总额<span style="">15000</span>元</p>
-                <p>本轮红包总额：<span>1000</span>元，已经派发现金：<span>1000</span>元</p>
-            </div>
-            <div class="swiper-slide">
-                图片一
-            </div>
-            <div class="swiper-slide">
-                图片二
-            </div>
-        </div>
-        <div class="swiper-button-prev  glyphicon glyphicon-menu-left white"></div>      
-        <div class="swiper-button-next  glyphicon glyphicon-menu-right white"></div>
-    </div>
 
-	<div class="container-fiuld middle">      
-		<img src="./image/4.jpg" class="img-responsive four">
-       <!--  <div class="userImg"></div>   
-        <p class="gdwl">XXXX</p>
-        <p class="fc">恭喜发财,大吉大利！</p> -->
-		<div class="kai-parent">
-			<button type="button" class="js-kai">開</button>			
+<div class="container-fliud middle">
+	<div class="row" style="padding: 0;margin: 0">
+		<div class="col-xs-10 col-xs-offset-1 middle-redpack-container">
+
+			<!-- 活动开始-->
+			<div class="middle-redpack-img" id="start">
+				<div class="middle-redpack-title text-center">
+					<p>中山广电网络</p>
+					<p style="position:relative;top:3px" class="js-fa">给你发了一个红包</p>
+				</div>
+				<div class="middle-redpack-subtitle text-center">恭喜发财，大吉大利!</div>
+				<div class="text-center"><button class="middle-redpack-button js-kai" style="font-size: 30px;background: #fed79b;">開</button></div>
+				<p class="text-center subHeading"></p>
+			</div>
+
+			<!-- 活动已结束 -->
+			<div class="middle-redpack-img" id="over">
+				<div class="middle-redpack-title text-center">
+					<p>中山广电网络</p>
+				</div>
+				<div class="text-center bottom-block">本次活动已全部结束</div>
+				<div class="text-center"><button class="middle-redpack-button js-kai"  disabled="disabled">已结束</button></div>
+				<p class="text-center subHeading">更多精彩活动<br>关注“中山广电网络”公众号</p>
+			</div>
+
+			<!-- 抢光啦 -->
+			<div class="middle-redpack-img" id="gone" >
+				<div class="middle-redpack-title text-center">
+					<p>中山广电网络</p>
+				</div>
+				<div class="text-center bottom-block">本轮红包已抢光</div>
+				<div class="text-center"><button class="middle-redpack-button js-kai"  disabled="disabled">抢光啦</button></div>
+				<p class="text-center subHeading">点击下方“红包雨天气预报”<br>关注下一轮红包雨</p>
+			</div>
+
+			<!-- 请期待 -->
+			<div class="middle-redpack-img" id="expect">
+				<div class="middle-redpack-title text-center">
+					<p>中山广电网络</p>
+				</div>
+				<div class="text-center top-block">红包雨即将来袭</div>
+				<div class="text-center"><button class="middle-redpack-button2 js-kai"  disabled="disabled">请期待</button></div>
+				<p class="text-center top-block-kid">请准备抢红包</p>
+			</div>
+
+			<!-- 已抢过 -->
+			<div class="middle-redpack-img" id="snatch">
+				<div class="middle-redpack-title text-center">
+					<p>中山广电网络</p>
+				</div>
+				<div class="text-center top-block">已领过本轮红包</div>
+				<div class="text-center"><button class="middle-redpack-button2 js-kai"  disabled="disabled">已抢过</button></div>
+				<p class="text-center top-block-kid">请期待下一轮红包</p>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+
+
+<div class="swiper-container">
+	<div class="swiper-wrapper">
+		<div class="swiper-slide">
+			<p style="margin-top: 10px">广电红包雨现金总额<span style="font-weight: bold;">15000</span>元</p>
+			<p>本轮红包总额：<span>3000</span>元，已经派发现金：<span>200</span>元</p>
+		</div>
+		<div class="swiper-slide"> 图片一 </div>
+		<div class="swiper-slide"> 图片二 </div>
+	</div>
+	<div class="swiper-button-prev  glyphicon glyphicon-menu-left white"></div>
+	<div class="swiper-button-next  glyphicon glyphicon-menu-right white"></div>
+</div>
+
+<div class="container-fiuld bottom">
+
+	<img src="./image/3.png" class="img-responsive">
+
+	<div class="bottom-kid">
+		<h2>抢红包规则：</h2>
+
+		<ul>
+			<li class="col-xs-4">
+				<div class="big">
+					<span>点“開”抢红包</span>
+				</div>
+				<div class="small">1</div>
+			</li>
+			<li class="col-xs-4">
+				<div class="big">
+					<textarea readonly="readonly">进入公众号</textarea>
+				</div>
+				<div class="small">2</div>
+			</li>
+			<li class="col-xs-4">
+				<div class="big">
+					<textarea readonly="readonly">点击领取红包 </textarea>
+				</div>
+				<div class="small">3</div>
+			</li>
+		</ul>
+
+		<div class="desc">
+			<p>1.抢到红包之后，请到公众号“中山广电网络”领取您的等值现金红包。</p>
+			<p>2.在法律允许范围内，广东省广播电视网络股份有限公司中山分公司有权就本次活动制定具体的规则和说明。</p>
 		</div>
 
-		<img src="./image/主页(6).png" class="img-responsive five">
-		<p class="text-center main-title">中山广电网络</p>
-		<p class="text-center subHeading">给你发了一个红包</p>
+		<a style="color: #fff" href="Weather-Forecast.html"><button type="button" class="btn btn-block yellow">立刻查询广电红包雨天气预报</button></a>
+		<a style="color: #fff" href="myRecord.html"><button type="button" class="btn btn-block yellow">我抢到的红包</button></a>
+		<a style="color: #fff" href="otherRecord.html"><button type="button" class="btn btn-block yellow">其他人抢到的红包</button></a>
 	</div>
+</div>
 
+<a href="http://www.qnws.net/" class="qnws">青年网商 技术支持</a>
 
-	<div class="container-fiuld bottom">
-
-		<img src="./image/3.jpg" class="img-responsive">
-
-        <div class="bottom-kid">
-            <h2>抢红包规则：</h2>
-
-            <ul>
-                <li class="col-xs-4">
-                    <div class="big">
-                        <textarea readonly="readonly">
-                         点"開"抢红包
-                        </textarea>
-                    </div>
-                    <div class="small">1</div>
-                </li>
-                <li class="col-xs-4">
-                    <div class="big">
-                         <textarea readonly="readonly">
-                         进入公众号
-                        </textarea>
-                    </div>
-                    <div class="small">2</div>
-                </li>
-                <li class="col-xs-4">
-                    <div class="big">
-                       <textarea readonly="readonly">
-                         点击领取红包
-                        </textarea>
-                    </div>
-                    <div class="small">3</div>
-                </li>
-            </ul>
-
-            <div class="desc">
-                <p>1.抢到红包之后，请到公众号“中山广电网络”领取您的等值现金红包。</p>
-                <p>2.在法律允许范围内，广东省广播电视网络股份有限公司中山分公司有权就本次活动制定具体的规则和说明。</p>
-            </div>
-
-            <a style="color: #fff" href="Weather-Forecast.html"><button type="button" class="btn btn-block yellow">立刻查询广电红包雨天气预报</button></a>
-            <a style="color: #fff" href="myRecord.html"><button type="button" class="btn btn-block yellow">我抢到的红包</button></a>
-            <a style="color: #fff" href="otherRecord.html"><button type="button" class="btn btn-block yellow">其他人抢到的红包</button></a>
-        </div>
+<!--遮罩层-->
+<!--中奖了-->
+<div class="mask1">
+	<div class="mask-body">
+		<span class="glyphicon glyphicon-remove-circle js-close"></span>
+		<img src="./image/6.png">
+		<div class="mask-title">
+			恭喜你抢到<span>现金红包</span>
+		</div>
+		<div class="money">
+			<span>2.15</span>元
+		</div>
+		<div class="mask-footer">
+			<p>红包将在10分钟内</p>
+			<p>通过公众号推送给你</p>
+		</div>
+		<a style="color: #fff" href="Weather-Forecast.html"><button type="button" class="btn btn-block">查询广电红包雨天气预报</button></a>
 	</div>
-    
-    <a href="http://www.qnws.net/" class="qnws">青年网商 技术支持</a>
+</div>
 
-    <!--遮罩层-->
-    <!--中奖了-->
-    <div class="mask1">
-        <div class="mask-body">
-            <span class="glyphicon glyphicon-remove-circle js-close"></span>
-            <img src="./image/6.png">
-            <div class="mask-title">
-                恭喜你抢到<span>现金红包</span>
-            </div>
-            <div class="money">
-               <span>2.15</span>元
-            </div>
-            <div></div>
-            <div class="mask-footer">           
-               <p>红包将在10分钟内</p>
-               <p>通过公众号推送给你</p>
-            </div>
-           <a style="color: #fff" href="Weather-Forecast.html"><button type="button" class="btn btn-block">查询广电红包雨天气预报</button></a>
-        </div>
-    </div>
-    
-    <!--二维码-->
-    <div class="mask2" >
-        <div class="mask-body">
-            <span class="title">您还没有关注我们哦~</span>
-            <span class="glyphicon glyphicon-remove-circle js-close2"></span>
-            <img src="./image/7.jpg" class="img-responsive">
-            <p>长按二维码即可关注</p>
-        </div>
-    </div>
+<!--二维码-->
+<div class="mask2">
+	<div class="mask-body">
+		<span class="title">您还没有关注我们哦~</span>
+		<span class="glyphicon glyphicon-remove-circle js-close2"></span>
+		<img src="./image/7.jpg" class="img-responsive">
+		<p>长按二维码即可关注</p>
+	</div>
+</div>
 
-    <!--弹框提示-->
-    <div class="mask3">
-        <div class="mask-body">
-            <div class="mask-content"></div>
-            <div class="know">知道了</div>
-        </div>
-    </div>
+<!--弹框提示-->
+<div class="mask3">
+	<div class="mask-body">
+		<div class="mask-content"></div>
+		<div class="know">知道了</div>
+	</div>
+</div>
 
-    <!--加载中-->
-    <div class="mask4">
-        <div class="mask-body" >
-            <img src="./image/1.gif">
-            <p>数据加载中</p>
-        </div>
-    </div>
+<!--加载中-->
+<div class="mask4">
+	<div class="mask-body" >
+		<img src="./image/1.gif">
+		<p>数据加载中</p>
+	</div>
+</div>
 
 </body>
 <script src="./js/fastclick.js"></script>
 <script src="http://libs.baidu.com/zepto/0.8/zepto.min.js"></script>
-<script src="./js/zepto.scroll.js"></script>
 <script src="./js/swiper-3.4.2.jquery.min.js"></script>
-<script src="./js/entrance.js"></script>
+<script src="./js/entrance.js?v=201791301"></script>
+<div style="display: none;">
+	<script language="javascript" type="text/javascript" src="//js.users.51.la/19287660.js"></script>
+</div>
 </html>
