兼容苹果问题，修改图片

--- a/Weather-Forecast.html
+++ b/Weather-Forecast.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+<meta name="viewport" content="width=320,maximum-scale=1.3,user-scalable=no">
 <title>广电微信红包雨</title>
 <link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./styles/Weather-Forecast.css">
+<link rel="stylesheet" type="text/css" href="./styles/Weather-Forecast.css?v=201791801">
 <body>
 	<div class="container-fluid">
 		<header>
@@ -14,9 +14,11 @@
 			<span>分享转发红包雨天气预报给您的家人</span>
 			<img src="./image/8.png">
 		</header>
-    	<img src="./image/11.jpg" class="img-responsive three">
-    	<p class="text-center">广电红包雨天气预报</p>
+    	<img src="./image/副页4.jpg" class="img-responsive three">
     	<img src="./image/9.jpg" class="nine">
+		<div class="text-center">
+			<a href="otherRecord.html" style="color:#fff"><button>查询其他人抢到的红包</button></a>
+		</div>
 	</div>
 </body>
 <script src="./js/zepto.min.js"></script>
