--- a/entrance.html
+++ b/entrance.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+	<meta name="viewport" content="width=320,maximum-scale=1.3,user-scalable=no">
 	<title>广电微信红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
@@ -128,7 +128,7 @@
 
 <!--遮罩层-->
 <!--中奖了-->
-<div class="mask1">
+<div class="mask1" >
 	<div class="mask-body">
 		<span class="glyphicon glyphicon-remove-circle js-close"></span>
 		<img src="./image/6.png">
