--- a/otherRecord.html
+++ b/otherRecord.html
@@ -3,23 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+	<meta name="viewport" content="width=320,maximum-scale=1.3,user-scalable=no">
 	<title>广电微信红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./styles/otherRecord.css">
+	<link rel="stylesheet" type="text/css" href="./styles/otherRecord.css?v=201791801">
 <body>
 <div class="container-fluid">
 	<header>
 		<span class="glyphicon glyphicon-menu-left back" onclick="javascript:history.back(-1);"></span>
 		<span class="static">活动已结束</span>
 	</header>
-	<img src="./image/11.jpg" class="img-responsive three">
-	<p class="text-center">看看谁抢到了红包</p>
+	<img src="./image/副页5.jpg" class="img-responsive three">
 	<table class="table">
 		<tr>
-			<th>sdfsafasdf</th>
-			<th>第一轮</th>
-			<th>0.05元</th>
+			<th></th>
+			<th></th>
+			<th></th>
 		</tr>
 	</table>
 	<a style="color: #fff" href="Weather-Forecast.html">
