--- a/entrance.html
+++ b/entrance.html
@@ -3,12 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=320,maximum-scale=1.3,user-scalable=no">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>广电微信红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/entrance.css?v=201791306">
-
 <body ontouchstart oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onbeforecopy="return false" oncopy="document.selection.empty()" onselect="return false" unselectable="on">
 
 <div class="container-fliud middle">
@@ -78,8 +77,8 @@
 			<p style="margin-top: 10px">广电红包雨现金总额<span style="font-weight: bold;">15000</span>元</p>
 			<p>本轮红包总额：<span>3000</span>元，已经派发现金：<span>200</span>元</p>
 		</div>
-		<div class="swiper-slide"> 图片一 </div>
-		<div class="swiper-slide"> 图片二 </div>
+		<div class="swiper-slide"></div>
+		<div class="swiper-slide"></div>
 	</div>
 	<div class="swiper-button-prev  glyphicon glyphicon-menu-left white"></div>
 	<div class="swiper-button-next  glyphicon glyphicon-menu-right white"></div>
