--- a/otherRecord.html
+++ b/otherRecord.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=320,maximum-scale=1.3,user-scalable=no">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>广电微信红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/otherRecord.css?v=201791801">
@@ -20,6 +20,7 @@
 			<th></th>
 			<th></th>
 		</tr>
+
 	</table>
 	<a style="color: #fff" href="Weather-Forecast.html">
 		<button type="button" class="btn btn-block yellow">立刻查询广电红包雨天气预报</button>
