--- a/entrance.html
+++ b/entrance.html
@@ -7,7 +7,7 @@
 	<title>广电微信红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
-	<link rel="stylesheet" type="text/css" href="./styles/entrance.css?v=201791306">
+	<link rel="stylesheet" type="text/css" href="./styles/entrance.css?v=201791308">
 <body ontouchstart oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onbeforecopy="return false" oncopy="document.selection.empty()" onselect="return false" unselectable="on">
 
 <div class="container-fliud middle">
@@ -71,14 +71,15 @@
 
 
 
-<div class="swiper-container">
+<div class="swiper-container swiper-container-horizontal swiper-container-autoheight">
 	<div class="swiper-wrapper">
 		<div class="swiper-slide">
 			<p style="margin-top: 10px">广电红包雨现金总额<span style="font-weight: bold;">15000</span>元</p>
 			<p>本轮红包总额：<span>3000</span>元，已经派发现金：<span>200</span>元</p>
 		</div>
-		<div class="swiper-slide"></div>
-		<div class="swiper-slide"></div>
+		<div class="swiper-slide"><img src="./image/a.jpg"></div>
+		<div class="swiper-slide"><img src="./image/b.jpg"></div>
+		<div class="swiper-slide"><img src="./image/c.jpg"></div>
 	</div>
 	<div class="swiper-button-prev  glyphicon glyphicon-menu-left white"></div>
 	<div class="swiper-button-next  glyphicon glyphicon-menu-right white"></div>
@@ -175,7 +176,7 @@
 <script src="./js/fastclick.js"></script>
 <script src="http://libs.baidu.com/zepto/0.8/zepto.min.js"></script>
 <script src="./js/swiper-3.4.2.jquery.min.js"></script>
-<script src="./js/entrance.js?v=201791301"></script>
+<script src="./js/entrance.js?v=201791303"></script>
 <div style="display: none;">
 	<script language="javascript" type="text/javascript" src="//js.users.51.la/19287660.js"></script>
 </div>
