--- a/entrance.html
+++ b/entrance.html
@@ -177,6 +177,7 @@
 <script src="http://libs.baidu.com/zepto/0.8/zepto.min.js"></script>
 <script src="./js/swiper-3.4.2.jquery.min.js"></script>
 <script src="./js/entrance.js?v=201791303"></script>
+<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <div style="display: none;">
 	<script language="javascript" type="text/javascript" src="//js.users.51.la/19287660.js"></script>
 </div>
