--- a/entrance.html
+++ b/entrance.html
@@ -124,7 +124,7 @@
 	</div>
 </div>
 
-<a href="http://www.qnws.net/" class="qnws">青年网商 技术支持</a>
+<a class="qnws">青年网商 技术支持</a>
 
 <!--遮罩层-->
 <!--中奖了-->
