感恩节红包1

--- a/Weather-Forecast.html
+++ b/Weather-Forecast.html
@@ -6,22 +6,24 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>广电微信红包雨</title>
 <link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./styles/Weather-Forecast.css?v=201791802">
+<link rel="stylesheet" type="text/css" href="./styles/Weather-Forecast.css?v=2017111502">
 <body>
 	<div class="container-fluid">
 		<header>
 			<span class="glyphicon glyphicon-menu-left back" onclick="javascript:history.back(-1);"></span>
-			<span>分享转发红包雨天气预报给您的家人</span>
+			<span class="ganen">感恩有您！分享红包雨天气预报给您的家人朋友</span>
 			<img src="./image/8.png">
 		</header>
-    	<img src="./image/副页4.jpg" class="img-responsive three">
-    	<img src="./image/9.jpg" class="nine">
+    	<img src="./image/2.jpg" class="img-responsive three">
+    	<img src="./image/9.png" class="nine">
 		<div class="text-center">
-			<a href="otherRecord.html" style="color:#fff"><button>查询其他人抢到的红包</button></a>
+			<a href="otherRecord.html" style="color:#fff"><button>查看其他人抢到的红包</button></a>
 		</div>
 	</div>
 </body>
 <script src="./js/zepto.min.js"></script>
+<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script src="./js/WX-share.js"></script>
 <div style="display: none;">
 <script language="javascript" type="text/javascript" src="//js.users.51.la/19287660.js"></script>
 </div>
