--- a/entrance.html
+++ b/entrance.html
@@ -7,7 +7,7 @@
 	<title>广电微信红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
-	<link rel="stylesheet" type="text/css" href="./styles/entrance.css?v=201791308">
+	<link rel="stylesheet" type="text/css" href="./styles/entrance.css?v=2017111508">
 <body ontouchstart oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onbeforecopy="return false" oncopy="document.selection.empty()" onselect="return false" unselectable="on">
 
 <div class="container-fliud middle">
@@ -26,13 +26,14 @@
 			</div>
 
 			<!-- 活动已结束 -->
-			<div class="middle-redpack-img" id="over">
+			<div class="middle-redpack-img" id="over" >
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 				</div>
 				<div class="text-center bottom-block">本次活动已全部结束</div>
+				<p class="text-center subHeading">关注公众号“中山广电网络”<br>了解更多优惠和精彩活动”</p>
 				<div class="text-center"><button class="middle-redpack-button js-kai"  disabled="disabled">已结束</button></div>
-				<p class="text-center subHeading">更多精彩活动<br>关注“中山广电网络”公众号</p>
+				
 			</div>
 
 			<!-- 抢光啦 -->
@@ -41,12 +42,12 @@
 					<p>中山广电网络</p>
 				</div>
 				<div class="text-center bottom-block">本轮红包已抢光</div>
+				<p class="text-center subHeading">点击下方“红包雨天气预报”<br>关注下一轮红包雨发放时间</p>
 				<div class="text-center"><button class="middle-redpack-button js-kai"  disabled="disabled">抢光啦</button></div>
-				<p class="text-center subHeading">点击下方“红包雨天气预报”<br>关注下一轮红包雨</p>
 			</div>
 
 			<!-- 请期待 -->
-			<div class="middle-redpack-img" id="expect">
+			<div class="middle-redpack-img" id="expect" >
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 				</div>
@@ -56,13 +57,14 @@
 			</div>
 
 			<!-- 已抢过 -->
-			<div class="middle-redpack-img" id="snatch">
+			<div class="middle-redpack-img" id="snatch" >
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 				</div>
-				<div class="text-center top-block">已领过本轮红包</div>
-				<div class="text-center"><button class="middle-redpack-button2 js-kai"  disabled="disabled">已抢过</button></div>
-				<p class="text-center top-block-kid">请期待下一轮红包</p>
+				<div class="text-center top-block2">您已领过本轮红包</div>
+				<p class="text-center top-block2-kid">点击下方“红包雨天气预报”<br>关注下一轮红包雨发放时间</p>
+				<div class="text-center"><button class="middle-redpack-button2 snatch-button js-kai"  disabled="disabled">已抢过</button></div>
+				
 			</div>
 
 		</div>
@@ -74,12 +76,13 @@
 <div class="swiper-container swiper-container-horizontal swiper-container-autoheight">
 	<div class="swiper-wrapper">
 		<div class="swiper-slide">
-			<p style="margin-top: 10px">广电红包雨现金总额<span style="font-weight: bold;">15000</span>元</p>
+			<p style="margin-top: 10px">广电红包雨现金总额<span style="font-weight: bold;">20000</span>元</p>
 			<p>本轮红包总额：<span>3000</span>元，已经派发现金：<span>200</span>元</p>
 		</div>
-		<div class="swiper-slide"><img src="./image/a.jpg"></div>
-		<div class="swiper-slide"><img src="./image/b.jpg"></div>
-		<div class="swiper-slide"><img src="./image/c.jpg"></div>
+		<div class="swiper-slide"><img src="./image/d.jpg" alt="广电高清8周年"></div>
+		<div class="swiper-slide"><img src="./image/a.jpg" alt="中山高清启播8周年"></div>
+		<div class="swiper-slide"><img src="./image/c.jpg" alt="存电视费不只送电视机"></div>
+		<div class="swiper-slide"><img src="./image/b.jpg" alt="广电宽带 简单实在"></div>
 	</div>
 	<div class="swiper-button-prev  glyphicon glyphicon-menu-left white"></div>
 	<div class="swiper-button-next  glyphicon glyphicon-menu-right white"></div>
@@ -112,15 +115,24 @@
 				<div class="small">3</div>
 			</li>
 		</ul>
-
+		<div class="ganen">
+			<div class="ganen-div">
+			<span>感恩节红包：</span>
+			</div>
+			<div class="ganen-div" style="margin-top: 5px;">
+				<p>
+					每轮红包雨的第8个，第68个，第88个，第688个和第888个抢红包用户，将额外获得88元感恩节幸运红包奖励。获得幸运红包的用户将在公众号收到中奖提示和幸运红包。
+				</p>
+			</div>
+		</div>
 		<div class="desc">
 			<p>1.抢到红包之后，请到公众号“中山广电网络”领取您的等值现金红包。</p>
 			<p>2.在法律允许范围内，广东省广播电视网络股份有限公司中山分公司有权就本次活动制定具体的规则和说明。</p>
 		</div>
-
-		<a style="color: #fff" href="Weather-Forecast.html"><button type="button" class="btn btn-block yellow">立刻查询广电红包雨天气预报</button></a>
-		<a style="color: #fff" href="myRecord.html"><button type="button" class="btn btn-block yellow">我抢到的红包</button></a>
-		<a style="color: #fff" href="otherRecord.html"><button type="button" class="btn btn-block yellow">其他人抢到的红包</button></a>
+		<a href="advertising.html"><button type="button" class="btn btn-block yellow">查看iPhone8等更多礼品领取方式</button></a>
+		<a href="Weather-Forecast.html"><button type="button" class="btn btn-block yellow">立刻查询广电红包雨天气预报</button></a>
+		<a href="myRecord.html"><button type="button" class="btn btn-block yellow">我抢到的红包</button></a>
+		<a href="otherRecord.html"><button type="button" class="btn btn-block yellow">其他人抢到的红包</button></a>
 	</div>
 </div>
 
@@ -128,21 +140,21 @@
 
 <!--遮罩层-->
 <!--中奖了-->
-<div class="mask1" >
+<div class="mask1">
 	<div class="mask-body">
 		<span class="glyphicon glyphicon-remove-circle js-close"></span>
 		<img src="./image/6.png">
 		<div class="mask-title">
-			恭喜你抢到<span>现金红包</span>
+			感恩有您<span> "清" 情更亲</span>
 		</div>
 		<div class="money">
-			<span>2.15</span>元
+			<span></span>元
 		</div>
 		<div class="mask-footer">
 			<p>红包将在10分钟内</p>
 			<p>通过公众号推送给你</p>
 		</div>
-		<a style="color: #fff" href="Weather-Forecast.html"><button type="button" class="btn btn-block">查询广电红包雨天气预报</button></a>
+		<a><button type="button" class="btn btn-block">查看iPhone8等更多礼品领取方式</button></a>
 	</div>
 </div>
 
@@ -152,7 +164,8 @@
 		<span class="title">您还没有关注我们哦~</span>
 		<span class="glyphicon glyphicon-remove-circle js-close2"></span>
 		<img src="./image/7.jpg" class="img-responsive">
-		<p>长按二维码即可关注</p>
+		<p class="p1">长按二维码即可关注</p>
+		<p class="p2">关注后发送 &nbsp "红包雨" &nbsp 	参与活动</p>
 	</div>
 </div>
 
@@ -176,9 +189,11 @@
 <script src="./js/fastclick.js"></script>
 <script src="http://libs.baidu.com/zepto/0.8/zepto.min.js"></script>
 <script src="./js/swiper-3.4.2.jquery.min.js"></script>
-<script src="./js/entrance.js?v=201791303"></script>
+<script src="./js/entrance.js"></script>
 <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script src="./js/WX-share.js"></script>
 <div style="display: none;">
 	<script language="javascript" type="text/javascript" src="//js.users.51.la/19287660.js"></script>
 </div>
+
 </html>
