--- a/advertising.html
+++ b/advertising.html
@@ -6,29 +6,28 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>广电微信红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./styles/otherRecord.css?v=2017111501">
+	<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
+	<link rel="stylesheet" type="text/css" href="./styles/advertising.css?v=2017111501">
 <body>
 <div class="container-fluid">
 	<header>
 		<span class="glyphicon glyphicon-menu-left back" onclick="javascript:history.back(-1);"></span>
-		<span class="static">活动已结束</span>
+		<span class="static">活动进行中...</span>
 	</header>
-	<img src="./image/13.jpg" class="img-responsive three">
-	<table class="table">
-		<tr>
-			<th></th>
-			<th></th>
-			<th></th>
-		</tr>
-
-	</table>
-	<a style="color: #fff" href="Weather-Forecast.html">
-		<button type="button" class="btn btn-block yellow">立刻查询广电红包雨天气预报</button>
-	</a>
+	<img src="./image/14.jpg" class="img-responsive three">
+	<div class="swiper-container swiper-container-horizontal swiper-container-autoheight">
+	<div class="swiper-wrapper">
+		<div class="swiper-slide"><img class="min" src="./image/769375528029856968.jpg"></div>
+		<div class="swiper-slide"><img class="min" src="./image/284600321797269602.jpg"></div>
+	</div>
+		<div class="swiper-button-prev"></div>
+		<div class="swiper-button-next"></div>
+	</div>
 </div>
 </body>
 <script src="./js/zepto.min.js"></script>
-<script type="./js/otherRecord.js"></script>
+<script src="./js/swiper-3.4.2.jquery.min.js"></script>
+<script src="./js/advertising.js"></script>
 <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="./js/WX-share.js"></script>
 <div style="display: none;">
