--- a/myRecord.html
+++ b/myRecord.html
@@ -6,14 +6,14 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>广电微信红包雨</title>
 <link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./styles/myRecord.css?v=201791801">
+<link rel="stylesheet" type="text/css" href="./styles/myRecord.css?v=2017111501">
 <body>
 	<header>
 		<span class="glyphicon glyphicon-menu-left back"></span>
 		<p class="" onclick="javascript:history.back(-1);">返回</p>
 	</header>
 	<div class="container-fluid">		
-		<p class="static" >活动进行中...</p>
+		<p class="static" >感谢您八年的陪伴！</p>
 		<div class="user"></div>
     	<p class="userName"><span>广电红包雨</span>共收到</p>
     	<p class="money"><span class="sum">0.00</span><span style="font-size: 34px">元</span></p>
@@ -43,6 +43,8 @@
 	</div>
 </body>
 <script src="./js/zepto.min.js"></script>
+<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script src="./js/WX-share.js"></script>
 <script src="./js/myrecord.js"></script>
 <div style="display: none;">
 <script language="javascript" type="text/javascript" src="//js.users.51.la/19287660.js"></script>
