--- a/entrance.html
+++ b/entrance.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-	<title>广电微信红包雨</title>
+	<title>广电感恩节红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
-	<link rel="stylesheet" type="text/css" href="./styles/entrance.css?v=2017111508">
+	<link rel="stylesheet" type="text/css" href="./styles/entrance.css?v=2017112001">
 <body ontouchstart oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onbeforecopy="return false" oncopy="document.selection.empty()" onselect="return false" unselectable="on">
 
 <div class="container-fliud middle">
@@ -15,7 +15,7 @@
 		<div class="col-xs-10 col-xs-offset-1 middle-redpack-container">
 
 			<!-- 活动开始-->
-			<div class="middle-redpack-img" id="start">
+			<div class="middle-redpack-img" id="start" style="display: none">
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 					<p style="position:relative;top:3px" class="js-fa">给你发了一个红包</p>
@@ -26,7 +26,7 @@
 			</div>
 
 			<!-- 活动已结束 -->
-			<div class="middle-redpack-img" id="over" >
+			<div class="middle-redpack-img" id="over">
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 				</div>
@@ -37,7 +37,7 @@
 			</div>
 
 			<!-- 抢光啦 -->
-			<div class="middle-redpack-img" id="gone" >
+			<div class="middle-redpack-img" id="gone">
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 				</div>
@@ -47,7 +47,7 @@
 			</div>
 
 			<!-- 请期待 -->
-			<div class="middle-redpack-img" id="expect" >
+			<div class="middle-redpack-img" id="expect">
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 				</div>
@@ -57,7 +57,7 @@
 			</div>
 
 			<!-- 已抢过 -->
-			<div class="middle-redpack-img" id="snatch" >
+			<div class="middle-redpack-img" id="snatch">
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 				</div>
@@ -80,8 +80,8 @@
 			<p>本轮红包总额：<span>3000</span>元，已经派发现金：<span>200</span>元</p>
 		</div>
 		<div class="swiper-slide"><img src="./image/d.jpg" alt="广电高清8周年"></div>
-		<div class="swiper-slide"><img src="./image/a.jpg" alt="中山高清启播8周年"></div>
 		<div class="swiper-slide"><img src="./image/c.jpg" alt="存电视费不只送电视机"></div>
+		<div class="swiper-slide"><img src="./image/a.jpg" alt="中山高清启播8周年"></div>
 		<div class="swiper-slide"><img src="./image/b.jpg" alt="广电宽带 简单实在"></div>
 	</div>
 	<div class="swiper-button-prev  glyphicon glyphicon-menu-left white"></div>
@@ -117,7 +117,7 @@
 		</ul>
 		<div class="ganen">
 			<div class="ganen-div">
-			<span>感恩节红包：</span>
+			<span>感恩节幸运红包：</span>
 			</div>
 			<div class="ganen-div" style="margin-top: 5px;">
 				<p>
@@ -154,7 +154,7 @@
 			<p>红包将在10分钟内</p>
 			<p>通过公众号推送给你</p>
 		</div>
-		<a><button type="button" class="btn btn-block">查看iPhone8等更多礼品领取方式</button></a>
+		<a href="advertising.html"><button type="button" class="btn btn-block">查看iPhone8等更多礼品领取方式</button></a>
 	</div>
 </div>
 
