--- a/advertising.html
+++ b/advertising.html
@@ -4,26 +4,49 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-	<title>广电微信红包雨</title>
+	<title>广电感恩节红包雨</title>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/swiper-3.4.2.min.css">
-	<link rel="stylesheet" type="text/css" href="./styles/advertising.css?v=2017111501">
+	<link rel="stylesheet" type="text/css" href="./styles/advertising.css?v=2017111502">
+	<link rel="stylesheet" type="text/css" href="./styles/scale.css">
 <body>
+
 <div class="container-fluid">
 	<header>
 		<span class="glyphicon glyphicon-menu-left back" onclick="javascript:history.back(-1);"></span>
-		<span class="static">活动进行中...</span>
+		<span class="static">返回</span>
 	</header>
 	<img src="./image/14.jpg" class="img-responsive three">
-	<div class="swiper-container swiper-container-horizontal swiper-container-autoheight">
-	<div class="swiper-wrapper">
-		<div class="swiper-slide"><img class="min" src="./image/769375528029856968.jpg"></div>
-		<div class="swiper-slide"><img class="min" src="./image/284600321797269602.jpg"></div>
-	</div>
-		<div class="swiper-button-prev"></div>
+	<div class="swiper-container" style="z-index: 0">
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">
+				<ul class="list">
+		            <li><img src="./image/769375528029856968.jpg" /></li>          
+		    	</ul>
+		    </div>	
+		    <div class="swiper-slide">
+				<ul class="list">
+		            <li><img src="./image/284600321797269602.jpg" /></li>          
+		    	</ul>
+		    </div>
+	    </div>	
+		
+	    <div class="swiper-button-prev"></div>
 		<div class="swiper-button-next"></div>
-	</div>
+    </div>	
 </div>
+    	<section class="imgzoom_pack">
+    		<div class="imgzoom_x">X</div>
+    		<div class="imgzoom_img"><img src="" /></div>
+    	</section>
+        <script src="js/scale.js"></script>
+		<script>
+			document.addEventListener("DOMContentLoaded", function(event){
+				ImagesZoom.init({
+					"elem": ".list"
+				});
+			}, false);
+		</script>
 </body>
 <script src="./js/zepto.min.js"></script>
 <script src="./js/swiper-3.4.2.jquery.min.js"></script>
