--- a/myRecord.html
+++ b/myRecord.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<title>广电微信红包雨</title>
+<title>广电感恩节红包雨</title>
 <link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="./styles/myRecord.css?v=2017111501">
 <body>
