首页红包忘记显示了

--- a/entrance.html
+++ b/entrance.html
@@ -15,7 +15,7 @@
 		<div class="col-xs-10 col-xs-offset-1 middle-redpack-container">
 
 			<!-- 活动开始-->
-			<div class="middle-redpack-img" id="start" style="display: none">
+			<div class="middle-redpack-img" id="start">
 				<div class="middle-redpack-title text-center">
 					<p>中山广电网络</p>
 					<p style="position:relative;top:3px" class="js-fa">给你发了一个红包</p>
@@ -136,7 +136,7 @@
 	</div>
 </div>
 
-<a class="qnws">青年网商 技术支持</a>
+<a href="http://www.qnws.net/" class="qnws">青年网商 技术支持</a>
 
 <!--遮罩层-->
 <!--中奖了-->
