--- a/entrance.html
+++ b/entrance.html
@@ -130,13 +130,13 @@
 			<p>2.在法律允许范围内，广东省广播电视网络股份有限公司中山分公司有权就本次活动制定具体的规则和说明。</p>
 		</div>
 		<a href="advertising.html"><button type="button" class="btn btn-block yellow">查看iPhone8等更多礼品领取方式</button></a>
-		<a href="Weather-Forecast.html"><button type="button" class="btn btn-block yellow">立刻查询广电红包雨天气预报</button></a>
-		<a href="myRecord.html"><button type="button" class="btn btn-block yellow">我抢到的红包</button></a>
-		<a href="otherRecord.html"><button type="button" class="btn btn-block yellow">其他人抢到的红包</button></a>
+		<a href="Weather-Forecast.html"><button type="button" class="btn btn-block yellow">查询广电红包雨天气预报</button></a>
+		<a href="myRecord.html"><button type="button" class="btn btn-block yellow">查看我抢到的红包</button></a>
+		<a href="otherRecord.html"><button type="button" class="btn btn-block yellow">查看其他人抢到的红包</button></a>
 	</div>
 </div>
 
-<a href="http://www.qnws.net/" class="qnws">青年网商 技术支持</a>
+<a class="qnws">青年网商 技术支持</a>
 
 <!--遮罩层-->
 <!--中奖了-->
