--- a/otherRecord.html
+++ b/otherRecord.html
@@ -23,7 +23,7 @@
 
 	</table>
 	<a style="color: #fff" href="Weather-Forecast.html">
-		<button type="button" class="btn btn-block yellow">立刻查询广电红包雨天气预报</button>
+		<button type="button" class="btn btn-block yellow">查询广电红包雨天气预报</button>
 	</a>
 </div>
 </body>
