修改主会场，微调

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 				<div class="gs-name">中山邮政</div>
 				<div class="hd-time">大年三十</div>
-				<div class="hd-money">红包总额4888元</div>
+				<div class="hd-money">利是总额4888元</div>
 			</li>
 			<li>
 				<div class="logo">
@@ -51,7 +51,7 @@
 				</div>
 				<div class="gs-name">青年网商</div>
 				<div class="hd-time">大年初一</div>
-				<div class="hd-money">红包总额8888元</div>
+				<div class="hd-money">利是总额8888元</div>
 			</li>
 			<li>
 				<div class="logo">
@@ -59,7 +59,7 @@
 				</div>
 				<div class="gs-name">中山邮储</div>
 				<div class="hd-time">大年初二</div>
-				<div class="hd-money">红包总额12888元</div>
+				<div class="hd-money">利是总额12888元</div>
 			</li>
 			<li>
 				<div class="logo">
@@ -67,7 +67,7 @@
 				</div>
 				<div class="gs-name">星火教育</div>
 				<div class="hd-time">大年初三</div>
-				<div class="hd-money">红包总额13888元</div>
+				<div class="hd-money">利是总额13888元</div>
 			</li>
 
 		</ul>
@@ -77,7 +77,7 @@
 		<p>活动主办：中国邮政集团公司中山市分公司</p>
 		<p>技术支持：中山市青年网商电子商务有限公司</p>
 		<p>咨询电话：0760-23794777</p>
-		<p>活动解释权归主办方所有</p>
+		<p>主办方在法律范围内拥有解释权</p>
 	</div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
