--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>新春红包雨活动</title>
+	<title>新春大拜年活动</title>
 	<link rel="stylesheet" href="styles/amazeui.min.css">
 	<link rel="stylesheet" href="styles/initialize.css">
 	<link rel="stylesheet" href="styles/index.css">
@@ -18,10 +18,7 @@
 		<div data-am-widget="slider" class="am-slider am-slider-b2 lb-container" data-am-slider='{&quot;controlNav&quot;:false}'>
 			<ul class="am-slides">
 				<li class="am-text-center">
-					2018春节现金红包总额<span>  40522</span>元
-				</li>
-				<li>
-
+					2018春节现金利是总额<span>  40522</span>元
 				</li>
 			</ul>
 	    </div>
@@ -35,7 +32,7 @@
 		<img src="image/1.jpg" class="am-img-responsive pos-a md-img1">
 		<img src="image/5.jpg" class="am-img-responsive ghxc">
 		<img src="image/6.jpg" class="am-img-responsive pos-a md-bg">
-		<a class="rule-link">点击查看红包雨规则</a>
+		<a class="rule-link">点击查看大拜年活动规则</a>
 		<ul>
 			<li>
 				<div class="logo">
@@ -57,7 +54,7 @@
 				<div class="logo">
 					<img src="image/youchu/1.png"  class="am-img-responsive youc">
 				</div>
-				<div class="gs-name">中山邮储</div>
+				<div class="gs-name">邮储银行</div>
 				<div class="hd-time">大年初二</div>
 				<div class="hd-money">利是总额12888元</div>
 			</li>
