--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 				</li>
 			</ul>
 	    </div>
-		<!-- -->
 		<img src="image/2.jpg" class="am-img-responsive img-2">
 		<img src="image/3-1.png" class="am-img-responsive activity-time">
 		<img src="image/4.jpg" class="am-img-responsive">
@@ -66,7 +65,6 @@
 				<div class="hd-time">大年初三</div>
 				<div class="hd-money">利是总额13888元</div>
 			</li>
-
 		</ul>
 	</div>
 
@@ -75,6 +73,18 @@
 		<p>技术支持：中山市青年网商电子商务有限公司</p>
 		<p>咨询电话：0760-23794777</p>
 		<p>主办方在法律范围内拥有解释权</p>
+	</div>
+
+	<div class="mask">
+		<img src="image/7.jpg" class="am-img-responsive">
+		<div class="mask-desc">
+			<h2 class="am-text-center" style="margin: 0">[ 新春红包雨活动规则 ]</h2>
+			<p>1.活动时间为从年三十到年初三；</p>
+			<p>2.每天15:00、20:00到各企业公众号参加新春大拜年活动；
+			</p>
+			<p>3.每人每次可抢到0.88-8.88的随机利是，领完即止；</p>
+			<p>4.领到随机利是后请留意微信服务通知的消息提示。</p>
+		</div>
 	</div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
