--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>新春大拜年活动</title>
 	<link rel="stylesheet" href="styles/amazeui.min.css">
 	<link rel="stylesheet" href="styles/initialize.css">
-	<link rel="stylesheet" href="styles/index.css">
+	<link rel="stylesheet" href="styles/index.css?v=2018020901">
 </head>
 <body>
 <div>
@@ -89,6 +89,6 @@
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/amazeui.min.js"></script>
-<script src="js/index.js"></script>
+<script src="js/index.js?v=2018020901"></script>
 </body>
 </html>
