--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<div class="mask">
 		<img src="image/7.jpg" class="am-img-responsive">
 		<div class="mask-desc">
-			<h2 class="am-text-center" style="margin: 0">[ 新春红包雨活动规则 ]</h2>
+			<h2 class="am-text-center" style="margin: 0">[ 新春大拜年活动规则 ]</h2>
 			<p>1.活动时间为从年三十到年初三；</p>
 			<p>2.每天15:00、20:00到各企业公众号参加新春大拜年活动；
 			</p>
