--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<title>新春大拜年活动</title>
 	<link rel="stylesheet" href="styles/amazeui.min.css">
 	<link rel="stylesheet" href="styles/initialize.css">
-	<link rel="stylesheet" href="styles/index.css?v=2018020901">
+	<link rel="stylesheet" href="styles/index.css?v=2018020903">
 </head>
 <body>
-<div>
+
 	<div class="am-g top">
 		<img src="image/1.jpg" class="am-img-responsive pos-a">
 		<!--顶部轮播 -->
@@ -78,7 +78,7 @@
 	<div class="mask">
 		<img src="image/7.jpg" class="am-img-responsive">
 		<div class="mask-desc">
-			<h2 class="am-text-center" style="margin: 0">[ 新春大拜年活动规则 ]</h2>
+			<h2 class="am-text-center" style="margin: 0;position: relative;top: -.3rem;">[ 新春大拜年活动规则 ]</h2>
 			<p>1.活动时间为从年三十到年初三；</p>
 			<p>2.每天15:00、20:00到各企业公众号参加新春大拜年活动；
 			</p>
@@ -89,6 +89,6 @@
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/amazeui.min.js"></script>
-<script src="js/index.js?v=2018020901"></script>
+<script src="js/index.js?v=2018020903"></script>
 </body>
 </html>
