红包分会场

--- a/main.html
+++ b/main.html
@@ -33,38 +33,47 @@
 		<img src="image/6.jpg" class="am-img-responsive pos-a md-bg">
 		<a class="rule-link">点击查看大拜年活动规则</a>
 		<ul>
-			<li>
-				<div class="logo">
-					<img src="image/youzhen/1.jpg"  class="am-img-responsive youz">
-				</div>
-				<div class="gs-name">中山邮政</div>
-				<div class="hd-time">大年三十</div>
-				<div class="hd-money">利是总额4888元</div>
-			</li>
-			<li>
-				<div class="logo">
-					<img src="image/qnws/1.png"  class="am-img-responsive qn">
-				</div>
-				<div class="gs-name">青年网商</div>
-				<div class="hd-time">大年初一</div>
-				<div class="hd-money">利是总额8888元</div>
-			</li>
-			<li>
-				<div class="logo">
-					<img src="image/youchu/1.png"  class="am-img-responsive youc">
-				</div>
-				<div class="gs-name">邮储银行</div>
-				<div class="hd-time">大年初二</div>
-				<div class="hd-money">利是总额12888元</div>
-			</li>
-			<li>
-				<div class="logo">
-					<img src="image/xinghuo/1.png"  class="am-img-responsive xhjy">
-				</div>
-				<div class="gs-name">星火教育</div>
-				<div class="hd-time">大年初三</div>
-				<div class="hd-money">利是总额13888元</div>
-			</li>
+			<a href="venue1/entrance.html?id=wx713a8c95b0a4eb14&name=1">
+				<li>
+					<div class="logo">
+						<img src="image/youzhen/1.jpg"  class="am-img-responsive youz">
+					</div>
+					<div class="gs-name">中山邮政</div>
+					<div class="hd-time">大年三十</div>
+					<div class="hd-money">利是总额4888元</div>
+				</li>
+			</a>
+			<a href="venue1/entrance.html?id=wxf21b6048d08dd3e4&name=2">
+				<li>
+					<div class="logo">
+						<img src="image/qnws/1.png"  class="am-img-responsive qn">
+					</div>
+					<div class="gs-name">青年网商</div>
+					<div class="hd-time">大年初一</div>
+					<div class="hd-money">利是总额8888元</div>
+				</li>
+			</a>
+			<a href="">
+				<li>
+					<div class="logo">
+						<img src="image/youchu/1.png"  class="am-img-responsive youc">
+					</div>
+					<div class="gs-name">邮储银行</div>
+					<div class="hd-time">大年初二</div>
+					<div class="hd-money">利是总额12888元</div>
+				</li>
+			</a>
+			<a href="">
+				<li>
+					<div class="logo">
+						<img src="image/xinghuo/1.png"  class="am-img-responsive xhjy">
+					</div>
+					<div class="gs-name">星火教育</div>
+					<div class="hd-time">大年初三</div>
+					<div class="hd-money">利是总额13888元</div>
+				</li>
+			</a>
+
 		</ul>
 	</div>
 
