--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
 					<div class="hd-money">利是总额8888元</div>
 				</li>
 			</a>
-			<a href="">
+			<a href="venue1/entrance.html?id=q&name=3">
 				<li>
 					<div class="logo">
 						<img src="image/youchu/1.png"  class="am-img-responsive youc">
@@ -63,7 +63,7 @@
 					<div class="hd-money">利是总额12888元</div>
 				</li>
 			</a>
-			<a href="">
+			<a href="venue1/entrance.html?id=w&name=4">
 				<li>
 					<div class="logo">
 						<img src="image/xinghuo/1.png"  class="am-img-responsive xhjy">
