--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 		<img src="image/6.jpg" class="am-img-responsive pos-a md-bg">
 		<a class="rule-link">点击查看大拜年活动规则</a>
 		<ul>
-			<a href="venue1/entrance.html?id=wx713a8c95b0a4eb14&name=1">
+			<a href="https://ruinyb.github.io/redpack/venue1/entrance.html?id=wx713a8c95b0a4eb14&name=1">
 				<li>
 					<div class="logo">
 						<img src="image/youzhen/1.jpg"  class="am-img-responsive youz">
