--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<title>新春大拜年活动</title>
 	<link rel="stylesheet" href="styles/amazeui.min.css">
 	<link rel="stylesheet" href="styles/initialize.css">
