--- a/venue1/entrance.html
+++ b/venue1/entrance.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Access-Control-Allow-Origin" content="*" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>新春微信红包雨</title>
 	<link rel="stylesheet" type="text/css" href="../styles/bootstrap.min.css">
